--- a/gulimall-member/pom.xml
+++ b/gulimall-member/pom.xml
@@ -15,7 +15,7 @@
 	<description>谷粒商城会员服务</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>14</java.version>
 		<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
 	</properties>
 
@@ -39,6 +39,12 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>com.atguigu.gulimall</groupId>
+			<artifactId>gulimall-common</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 
